email builder overlap issue fixed

--- a/src/components/Editor/styles/editor-sidebar.scss
+++ b/src/components/Editor/styles/editor-sidebar.scss
@@ -26,6 +26,17 @@
             }
         }
 
+        ._Stack_1jdgv_1 {
+            margin-top: 0;
+            margin-left: 0;
+        }
+        ._Stack_1jdgv_1._spacingExtraTight_1jdgv_28._alignmentCenter_1jdgv_106 > ._Item_1jdgv_8:first-child {
+            display: none;
+        }
+        ._Stack_1jdgv_1._distributionEqualSpacing_1jdgv_80._alignmentCenter_1jdgv_106._noWrap_1jdgv_14 > ._Item_1jdgv_8:last-child {
+            display: none;
+        }
+
 
         //-------text align control------
         .mrm-stylish-radio {
